[package]
name = "killer-sudoku-helper"
version = "0.1.0"
authors = ["Rose Peck <rosepeck1997@gmail.com>"]
edition = "2021"
description = "A small command-line tool to help compute possible values for killer sudoku cages."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
